[gd_scene load_steps=9 format=3 uid="uid://casimfksataxa"]

[ext_resource type="Script" uid="uid://bdflealo8laxw" path="res://scripts/UI/main_menu.gd" id="1_2wh52"]
[ext_resource type="Texture2D" uid="uid://sd67wfkiyj00" path="res://assets/textures/TitleMenu.png" id="1_yqorp"]
[ext_resource type="FontFile" uid="uid://dpl72736p21ts" path="res://assets/fonts/Spicy Sale.ttf" id="2_0ykhv"]
[ext_resource type="PackedScene" uid="uid://dextpsgg4068r" path="res://scenes/UI/HowToPlay.tscn" id="4_ow34m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yqorp"]
texture = ExtResource("1_yqorp")
modulate_color = Color(0.7121294, 0.7121294, 0.71212935, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukcvp"]
bg_color = Color(0.7921569, 0.101960786, 1, 1)
border_color = Color(0.4313402, 0.4313403, 0.43134, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ykhv"]
bg_color = Color(0.6082167, 0.0014824271, 0.77481365, 1)
border_color = Color(0.4313402, 0.4313403, 0.43134, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wh52"]
bg_color = Color(0.6479912, 0.0038269723, 0.9721467, 1)
border_color = Color(0.4313402, 0.4313403, 0.43134, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wh52")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yqorp")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -97.5
offset_right = 122.5
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Tutorial" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Exit")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "  Tutorial 1  "

[node name="Tutorial2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "  Tutorial 2  "

[node name="Tutorial3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "  Tutorial 3  "

[node name="Tutorial4" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "  Tutorial 4  "

[node name="StartNoAgent" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "  Start (without agents)  "

[node name="StartNoPlayer" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "  Start (without player)  "

[node name="StartRegular" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "Start"

[node name="Exit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Tutorial")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ykhv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wh52")
theme_override_styles/focus = SubResource("StyleBoxFlat_2wh52")
text = "Exit"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -376.0
offset_right = 279.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.79066235, 0.1035481, 0.99999994, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 60
text = "The restomancer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" parent="." instance=ExtResource("4_ow34m")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Control/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Tutorial2" to="." method="_on_tutorial_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Tutorial3" to="." method="_on_tutorial_3_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Tutorial4" to="." method="_on_tutorial_4_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/StartNoAgent" to="." method="_on_start_no_agent_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/StartNoPlayer" to="." method="_on_start_no_player_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/StartRegular" to="." method="_on_start_regular_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control2/MarginContainer/HBoxContainer/MarginContainer/BackFromHowToPlay" to="." method="_on_back_from_how_to_play_pressed"]

[editable path="Control2"]
